fix working directory and handle inactive pathways

--- a/scripts/Downstream analysis.Rmd
+++ b/scripts/Downstream analysis.Rmd
@@ -11,6 +11,7 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, fig.align = "center")
+knitr::opts_knit$set(root.dir = normalizePath(".."))
 ```
 
 ## Setup
